Fixed ListValueNodes and parsing comments